--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
 publish = "public"
-command = "hugo -b $URL"
+command = "hugo"
+
+[context.deploy-preview]
+command = "hugo -b $DEPLOY_PRIME_URL"
