--- a/data/careers.yml
+++ b/data/careers.yml
@@ -2,34 +2,61 @@ enable: true
 title: Come work with us
 subtitle: >
   We're always looking for awesome Cloud developers and engineers to join us. Take a look at these two roles and let us know if you're up for a cup of coffee!
-content:
 
-  - icon: fa fa-cloud
-    name: Cloud Infrastructure
-    text: >
-      The public cloud is fundamentally different compared to on-premise infrastructure. Servers and containers are ephemeral, autoscalers take care of the scalability and orchestration is done in code. This requires a different way of working. No more managing pets, but herding cattle.
+profiles:
 
-  - icon: fa fa-sitemap
-    name: Cloud Architecture
+  - name: Cloud Engineer
     text: >
-      By leveraging cloud technologies like containerization and serverless, applications become resilient, responsive and scalable. This enables developers to build cost-effective microservices. But the cost model also changes. And what about privacy, compliance and security? Our engineers can help.
+      You are:
 
-  - icon: icon ion-logo-tux
-    name: Cloud Development
-    text: >
-      It's hard to keep up with the innovation pace of the cloud. Every year, hundreds of new services are developed by Amazon, Microsoft and Google. This enables you to leverage innovative cloud services, so your developers can focus on building business value.
+       * **passionate** about infrastructure and able to communicate and coach the advantages of the cloud to both business, agile teams in **DevOps** cloud development. They get that you get the cloud.
 
-  - icon: icon ion-md-git-network
-    name: True DevOps
-    text: >
-      On-premise DevOps requires jacks of all trades to keep things running smoothly. But with the cloud, every developer can work on things like pipelines, monitoring and other non-functionals. The cloud enables true DevOps: your team builds it, runs it and manages it. All without a traditional operations department.
+       * You are a polyglot **developer/scripter** and would almost call yourself a programmer: Bash, Python, Go, Perl (just joking, no not Perl).
 
-  - icon: icon ion-md-people
-    name: Workshops
-    text: >
-      Whether you are just starting with the cloud or you are already cloud-native, our tailor-made workshops can give you guidance, feedback and insights. We provide workshops focused on cloud, containerization, CI/CD and cloud-native development.
+       * There is no type of infrastructure that you haven't coded, no service deployment that you haven't **automated**.
 
-  - icon: icon ion-md-school
-    name: We train your stack
+       * Asking for a strong agile background is superfluous for you. Without agile there is no DevOps.
+
+      You did:
+
+       * Deploy applications with infrastructure as code monitoring and cloud native CI/CD pipelines with AWS CodeCommit, CodeBuild, Elastic Beanstalk, CodePipeline, CloudFormation or similar services on Google or Azure.
+
+       * Understand, implement, and automate security controls, secure network segmenting and secrets management in a dynamic (multicloud) environment with AWS IAM, KMS, EC2 Systems Manager, Cognito, SAM, CloudTrail, X-Ray or similar services on Google or Azure.
+
+       * Manage, monitor and fine tune applications optimally.
+
+      Wait. There is more?
+
+       * Experience in Site Reliability Engineering.
+
+       * AWS / GCP/ Microsoft Cloud certifications.
+
+      Check all the boxes? Awesome, we are speechless. Come join us.
+
+  - name: Cloud Developer
     text: >
-      Moving to the cloud often means investing in new skills. Developers have to learn concepts like infrastructure as code, containerization and ephemeral infrastructure. We help by training your developers your stack, so you can continue building business value.
+      You are:
+
+       * a seasoned craftsman with passion for programming and able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the cloud.
+
+       * a polyglot Programmer (Java, Scala, Javacript/Typescript, Go, Python), with knowledge of the relevant ecosystem needed for building highly scalable enterprise applications like no other.
+
+       * There is no type of infrastructure that you haven't coded, no service deployment that you haven't **automated**.
+
+       * Asking for a strong agile background is superfluous for you. Without agile there is no DevOps.
+
+      You did:
+
+       * Develop web applications using cloud containers or serverless architectures with for example AWS EC2, EKS, IAM, S3, Route S3, Elasticache or similar services on Google or Azure.
+
+       * Design and develop serverless architectures with AWS Lambda, Dynamo DB, Cognito or similar services on Google or Azure.
+
+       * Integrate and decouple applications with for example SQS, SNS, Kinesis or similar services on Google or Azure.
+
+      Not enough? You also have:
+
+       * Deployed applications with infrastructure as code monitoring and cloud native CI/CD pipelines with AWS CodeCommit, CodeBuild, Elastic Beanstalk, CodePipeline, CloudFormation or similar services on Google or Azure.
+
+       * AWS / GCP/ Microsoft Cloud certifications.
+
+      Still interested? Then we should talk.
