--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "animate": "^1.0.0",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "tar": "^4.4.8"
   },
   "devDependencies": {
     "animate.css": "^3.7.0",
