--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate": "^1.0.0",
     "bootstrap": "^4.3.1",
+    "normalize.css": "^8.0.1",
     "tar": "^4.4.8"
   },
   "devDependencies": {
