--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "ionicons": "^4.5.8",
     "owl-carousel": "^1.0.0",
     "postcss-cli": "^6.1.2",
+    "postcss-remove-unused-css": "^1.0.4",
+    "postcss-uncss": "^0.16.1",
     "scss-powertools": "^1.1.0",
+    "uncss": "^0.16.2",
     "url-loader": "^1.1.2",
     "venobox": "^1.8.5"
   }
