--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = "hugo --gc --minify && npm run postcss"
 
 [context.production.environment]
 HUGO_VERSION = "0.55.5"
@@ -15,13 +15,13 @@ HUGO_VERSION = "0.55.5"
 HUGO_ENV = "production"
 
 [context.deploy-preview]
-command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL && npm run postcss"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.55.5"
 
 [context.branch-deploy]
-command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify -b $DEPLOY_PRIME_URL && npm run postcss"
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.55.5"
