--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Skyworkz website",
   "main": "index.js",
   "scripts": {
-    "postcss": "mv public/css/style.css public/css/original.css && postcss -c postcss.config.js -o public/css/style.css public/css/original.css"
+    "postcss": "cp public/css/style.css public/css/original.css && postcss -c postcss.config.js -o public/css/style.css public/css/original.css"
   },
   "author": "",
   "license": "ISC",
