--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-title = "Skyworkz"
+title = "Skyworkz, Cloud Engineers and Developers"
+description = "Skyworkz consists of highly skilled Cloud Developers and DevOps engineers, who help companies become Cloud Native."
 baseURL = "https://skyworkz.nl"
 languageCode = "en-us"
 enableRobotsTXT = true
