--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@fullcalendar/core": "^4.1.0",
+    "@fullcalendar/daygrid": "^4.1.0",
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
