--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.3.1",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
+    "fstream": ">=1.0.12",
     "github-syntax-light": "^0.5.0",
     "ionicons": "^4.5.8",
     "normalize.css": "^8.0.1",
