--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "scss-powertools": "^1.1.0",
     "uncss": "^0.16.2",
     "url-loader": "^1.1.2",
-    "venobox": "^1.8.5"
+    "venobox": "^1.8.5",
+    "set-value": ">=2.0.1",
+    "mixin-deep": ">=1.3.2",
+    "lodash": ">=4.17.13"
   }
 }
