--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Skyworkz, Cloud Engineers and Developers"
+title = "Skyworkz Cloud Consultants"
 baseURL = "https://skyworkz.nl"
 languageCode = "en-us"
 enableRobotsTXT = true
