Added social stuff

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
 pygmentsUseClasses            = true
 theme = "appton"
+inst_access = ""
 
 [menu]
 
