--- a/config.toml
+++ b/config.toml
@@ -89,7 +89,7 @@ inst_access = ""
       title = "Stop by for a visit"
       address = "Tractieweg 41 studio N, 3534AP, Utrecht, The Netherlands"
       email = "Email: info@skyworkz.nl"
-      phone = "Phone: +31 6 3392 1442 (Bas)"
+      phone = "Phone: +31 6 3392 1442 (Bas Tichelaar)"
     [params.contact.gmaps]
       title = "Plan your route"
 
