Added dushyant's profile and picture to teams

--- a/data/team.yml
+++ b/data/team.yml
@@ -102,3 +102,10 @@ members:
       Cloud Consultant
     description: >
       Jeroen has many years of experience designing and building secure, reliable and scalable platforms that are easy to use.
+  - category: Engineering
+    image: "dushyant.jpg"
+    name: Dushyant Chakravorty
+    teaser: >
+      Cloud Consultant
+    description: >
+      Dushyant is one of the cloud engineers, he likes to build and manage scalable cloud platforms. 
