Corrected the position on Dushyant's profile

--- a/data/team.yml
+++ b/data/team.yml
@@ -106,6 +106,6 @@ members:
     image: "dushyant.jpg"
     name: Dushyant Chakravorty
     teaser: >
-      Cloud Consultant
+      Cloud Engineer
     description: >
       Dushyant is one of the cloud engineers, he likes to build and manage scalable cloud platforms. 
